[gd_scene load_steps=28 format=3 uid="uid://dr6k31q7yjhmr"]

[ext_resource type="Script" uid="uid://c3bpjvrdsvmy6" path="res://scripts/menu.gd" id="1"]
[ext_resource type="Shader" uid="uid://dq77r7w65bws0" path="res://shaders/stars.gdshader" id="2"]
[ext_resource type="Texture2D" uid="uid://bqescvwexpns2" path="res://textures/ui/Untitled 08-08-2024 07-18-10 (1) (1).png" id="3"]
[ext_resource type="Texture2D" uid="uid://dsgaddjs43v4p" path="res://textures/ui/Untitled 08-08-2024 07-18-10 (1).png" id="4"]
[ext_resource type="Texture2D" uid="uid://ro61byxcl6wb" path="res://textures/ui/Untitled 08-08-2024 07-18-10 (2).png" id="5"]
[ext_resource type="Texture2D" uid="uid://by3hv4coijng3" path="res://textures/ui/Untitled 08-08-2024 07-18-10 (5).png" id="6"]
[ext_resource type="Texture2D" uid="uid://c6vg5x6j4xxas" path="res://textures/ui/Untitled 08-08-2024 07-18-10 (6).png" id="7"]
[ext_resource type="Texture2D" uid="uid://csh4cgmf0y5iw" path="res://textures/ui/Untitled 08-08-2024 07-18-10 (3).png" id="8"]
[ext_resource type="Theme" uid="uid://qb0c3yxrvyka" path="res://resources/theme.tres" id="9"]
[ext_resource type="FontVariation" uid="uid://cswaniwqhxsha" path="res://titlefont.tres" id="10"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_v257j"]
noise_type = 0
frequency = 0.0766

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uhr5j"]
noise = SubResource("FastNoiseLite_v257j")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tdbv"]
shader = ExtResource("2")
shader_parameter/resolution = Vector2(150, 90)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_uhr5j")
shader_parameter/density = 25.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3qjxv"]
bounce = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqx4s"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdkdw"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_argsx"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kejcu"]
size = Vector2(64, 64)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_pjpwl"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_12tty"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_h5jn4"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_n6mdn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4qe6"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.165657, 0.165656, 0.165656, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikd8v"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.165657, 0.165656, 0.165656, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ivqb"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.165657, 0.165656, 0.165656, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlby6"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.165657, 0.165656, 0.165656, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Environment" id="Environment_04cki"]
background_mode = 3
background_canvas_max_layer = 1
glow_enabled = true
glow_levels/1 = 5.9
glow_levels/2 = 4.2
glow_levels/3 = 3.02
glow_levels/4 = 2.64
glow_levels/5 = 1.62
glow_levels/7 = 0.93
glow_intensity = 1.98
glow_strength = 1.1
glow_bloom = 0.01
glow_blend_mode = 1

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 24.0
offset_right = -26.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5tdbv")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0236364
anchor_top = -0.04
anchor_right = 1.02364
anchor_bottom = 1.04
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Node2D" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="Node2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(537, 467)
physics_material_override = SubResource("PhysicsMaterial_3qjxv")
gravity_scale = 0.0
linear_damp_mode = 1
angular_velocity = 0.0872665
angular_damp_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RigidBody2D"]
shape = SubResource("RectangleShape2D_xqx4s")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/RigidBody2D"]
scale = Vector2(4, 4)
texture = ExtResource("3")

[node name="RigidBody2D2" type="RigidBody2D" parent="Node2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(289, 159)
physics_material_override = SubResource("PhysicsMaterial_3qjxv")
gravity_scale = 0.0
linear_damp_mode = 1
angular_velocity = 0.0872665
angular_damp_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RigidBody2D2"]
shape = SubResource("RectangleShape2D_kdkdw")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/RigidBody2D2"]
scale = Vector2(4, 4)
texture = ExtResource("4")

[node name="RigidBody2D3" type="RigidBody2D" parent="Node2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(146, 445)
physics_material_override = SubResource("PhysicsMaterial_3qjxv")
gravity_scale = 0.0
linear_damp_mode = 1
angular_velocity = 0.0872665
angular_damp_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RigidBody2D3"]
shape = SubResource("RectangleShape2D_argsx")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/RigidBody2D3"]
scale = Vector2(4, 4)
texture = ExtResource("5")

[node name="RigidBody2D4" type="RigidBody2D" parent="Node2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(893, 271)
physics_material_override = SubResource("PhysicsMaterial_3qjxv")
gravity_scale = 0.0
linear_damp_mode = 1
angular_velocity = 0.0872665
angular_damp_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RigidBody2D4"]
shape = SubResource("RectangleShape2D_kejcu")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/RigidBody2D4"]
scale = Vector2(4, 4)
texture = ExtResource("6")

[node name="RigidBody2D5" type="RigidBody2D" parent="Node2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(840, 441)
physics_material_override = SubResource("PhysicsMaterial_3qjxv")
gravity_scale = 0.0
linear_damp_mode = 1
angular_velocity = 0.0872665
angular_damp_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RigidBody2D5"]
shape = SubResource("RectangleShape2D_kejcu")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/RigidBody2D5"]
scale = Vector2(4, 4)
texture = ExtResource("7")

[node name="RigidBody2D6" type="RigidBody2D" parent="Node2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(746, 141)
physics_material_override = SubResource("PhysicsMaterial_3qjxv")
gravity_scale = 0.0
linear_damp_mode = 1
angular_velocity = 0.0872665
angular_damp_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/RigidBody2D6"]
shape = SubResource("RectangleShape2D_kejcu")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/RigidBody2D6"]
scale = Vector2(4, 4)
texture = ExtResource("8")

[node name="top_border" type="StaticBody2D" parent="Node2D"]
position = Vector2(35, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/top_border"]
shape = SubResource("WorldBoundaryShape2D_pjpwl")

[node name="left_border" type="StaticBody2D" parent="Node2D"]
position = Vector2(-27, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/left_border"]
shape = SubResource("WorldBoundaryShape2D_12tty")

[node name="right_border" type="StaticBody2D" parent="Node2D"]
position = Vector2(1128, 62)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/right_border"]
shape = SubResource("WorldBoundaryShape2D_h5jn4")

[node name="bottom_border" type="StaticBody2D" parent="Node2D"]
position = Vector2(966, 623)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/bottom_border"]
shape = SubResource("WorldBoundaryShape2D_n6mdn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -60.0
offset_right = 55.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -60.0
offset_right = 55.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button4" type="Button" parent="MarginContainer/CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9")
theme_type_variation = &"FlatButton"
theme_override_styles/hover = SubResource("StyleBoxFlat_g4qe6")
theme_override_styles/normal = SubResource("StyleBoxFlat_g4qe6")
text = "Load game"

[node name="Button" type="Button" parent="MarginContainer/CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9")
theme_type_variation = &"FlatButton"
theme_override_styles/hover = SubResource("StyleBoxFlat_ikd8v")
theme_override_styles/normal = SubResource("StyleBoxFlat_ikd8v")
text = "New game"

[node name="Button2" type="Button" parent="MarginContainer/CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9")
theme_type_variation = &"FlatButton"
theme_override_styles/hover = SubResource("StyleBoxFlat_7ivqb")
theme_override_styles/normal = SubResource("StyleBoxFlat_7ivqb")
text = "Options"

[node name="Button3" type="Button" parent="MarginContainer/CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9")
theme_type_variation = &"FlatButton"
theme_override_styles/hover = SubResource("StyleBoxFlat_nlby6")
theme_override_styles/normal = SubResource("StyleBoxFlat_nlby6")
text = "Quit"

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/CanvasLayer"]
top_level = true
anchors_preset = -1
anchor_left = -0.0236364
anchor_top = -0.04
anchor_right = 1.02364
anchor_bottom = 1.04
offset_left = 1.22909
offset_top = 1.92
offset_right = 1.22913
offset_bottom = 1.91998
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
modulate = Color(1.3, 1.3, 1.3, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.5
offset_right = 256.5
offset_bottom = 100.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_colors/font_color = Color(3.94672e-06, 0.543762, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(9.09671e-06, 0.763076, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 7
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 80
text = "Radioid"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_04cki")

[connection signal="mouse_entered" from="MarginContainer/CanvasLayer/VBoxContainer/Button4" to="." method="_on_button_4_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CanvasLayer/VBoxContainer/Button4" to="." method="_on_button_4_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/CanvasLayer/VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CanvasLayer/VBoxContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/CanvasLayer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CanvasLayer/VBoxContainer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CanvasLayer/VBoxContainer/Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="MarginContainer/CanvasLayer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/CanvasLayer/VBoxContainer/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CanvasLayer/VBoxContainer/Button3" to="." method="_on_button_3_mouse_exited"]
[connection signal="pressed" from="MarginContainer/CanvasLayer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
